update snake to camel
